# osu-performance

./: .appveyor.yml  .env  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: main.yml  pack.yml
Dependencies/MySQL/include/: my_config.h  mysql_version.h
Dependencies/MySQL/lib/: libmariadb.lib
Dependencies/StrFormat/: ExtendedFormat.h  FloatRenderer.h  IntegerRenderer.h  StrFormat.h  StringRenderer.h  printf.h
Dependencies/curl/: LICENSE
Dependencies/curl/lib/: Makefile.vc8  Makefile.vc9  libcurl.lib
Scripts/: dump_sample_tables.sh  wrapper_all.sh
Src/: CMakeLists.txt  Common.cmake  PrecompiledHeader.cmake
Src/Processor/: Beatmap.cpp  Beatmap.h  CCURL.cpp  CCURL.h  CMakeLists.txt  CURL.cpp  CURL.h  DDog.cpp  DDog.h  PrecompiledHeader.cpp  PrecompiledHeader.h  Processor.cpp  Processor.h  Score.cpp  Score.h  SharedEnums.h  UUID.cpp  UUID.h  User.cpp  User.h  main.cpp
Src/Processor/CatchTheBeat/: CatchTheBeatScore.cpp  CatchTheBeatScore.h
Src/Processor/Mania/: ManiaScore.cpp  ManiaScore.h
Src/Processor/Standard/: StandardScore.cpp  StandardScore.h
Src/Processor/Taiko/: TaikoScore.cpp  TaikoScore.h
Src/Shared/: Config.cpp  Config.h  Shared.h  configVariables.h
Src/Shared/Core/: Active.cpp  Active.h  Exception.cpp  Exception.h  Logger.cpp  Logger.h  SharedQueue.h  StringUtil.cpp  StringUtil.h  StringUtils.h  Threading.cpp  Threading.h  Types.h
Src/Shared/Math/: Math.h
Src/Shared/Network/: DatabaseConnection.cpp  DatabaseConnection.h  QueryResult.cpp  QueryResult.h  UpdateBatch.cpp  UpdateBatch.h
dependencies/StrFormat/: ExtendedFormat.h  FloatRenderer.h  IntegerRenderer.h  StringRenderer.h  generic_exception.h  printf.h
dependencies/curl/include/: Makefile.in
dependencies/curl/lib/: Makefile.in  Makefile.vc10  Makefile.vc6  Makefile.vc8  Makefile.vc9
docker/: Dockerfile  run.sh
include/pp/: Common.h
include/pp/performance/: Beatmap.h  CURL.h  DDog.h  Processor.h  Score.h  UUID.h  User.h
include/pp/performance/catch/: CatchScore.h  CatchTheBeatScore.h
include/pp/performance/mania/: ManiaScore.h
include/pp/performance/osu/: OsuScore.h  StandardScore.h
include/pp/performance/taiko/: TaikoScore.h
include/pp/shared/: Active.h  DatabaseConnection.h  QueryResult.h  SharedQueue.h  Threading.h  Types.h  UpdateBatch.h
scripts/: docker-entrypoint.sh  dump_sample_tables.sh  wrapper_all.sh  wrapper_new.sh
src/: CMakeLists.txt  Common.cpp  common.cpp
src/performance/: Beatmap.cpp  CURL.cpp  DDog.cpp  Processor.cpp  Score.cpp  UUID.cpp  User.cpp  main.cpp
src/performance/catch/: CatchScore.cpp  CatchTheBeatScore.cpp
src/performance/mania/: ManiaScore.cpp
src/performance/osu/: OsuScore.cpp  StandardScore.cpp
src/performance/taiko/: TaikoScore.cpp
src/shared/: Active.cpp  DatabaseConnection.cpp  QueryResult.cpp  Threading.cpp  UpdateBatch.cpp
